crates/aranya-policy-compiler/tests/data/scoping/match_arm_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
6 |     return y
  |            ^ 'y' not in scope
